--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@ best practices
 <center>
 <br><br><br><br>
 
-<h1>Manifesto for Agile Software Development
-</h1>
+<h1>Manifesto for Agile Software Development</h1>
 <br><br><br>
 
 <p>
