--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ best practices
 ">
 </head>
 <body background="background.jpg">
+  
 <center>
 <br><br><br><br>
 
@@ -92,5 +93,8 @@ but only in its entirety through this notice.
 
 </font>
 <br><br>
+  
+{% include languages.html %}  
+  
 </body>
 
