--- a/temp.html
+++ b/temp.html
@@ -93,8 +93,11 @@ but only in its entirety through this notice.
 
 </font>
 <br><br>
-  
-{% include languages.html %}  
+
+
+<div w3-include-html="_includes/languages.html"></div>
+
+</center>
   
 </body>
 
